# tiny_glfw_renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  tiny_glfw_renderer.h  tiny_renderer.h
example/: box.cpp  box_frustum.cpp  box_keeping_aspect.cpp  box_keeping_scale.cpp  box_mvp.cpp  box_orthogonal.cpp  box_perspective.cpp  cube.cpp  main.cpp  rect_frustum.cpp  rect_keeping_aspect.cpp  rect_keeping_scale.cpp  rect_perspective.cpp
example/shaders/: color_mvp.vert  color_point.frag  keep_scale.vert  mvp.vert  naive_mvp.vert  normal_point.frag  point.frag  point.vert
